updated notebooks and generalized modelfitting.py

--- a/train_models/train_megnoxgb_resonant.ipynb
+++ b/train_models/train_megnoxgb_resonant.ipynb
@@ -52,6 +52,89 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Fraction not chaotic over 1e4 orbits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5199476782210595"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(testX['megno']<2.5).sum()/testX['megno'].shape[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Fraction not chaotic over 1e4 orbits that were stable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.29300196206671025"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "regular = testX['megno'] < 2.5\n",
+    "testY[regular].sum()/testY.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Fraction chaotic over 1e4 orbits that were stable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.012426422498364944"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chaotic = testX['megno'] > 2.5\n",
+    "testY[chaotic].sum()/testY.shape[0]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -103,6 +186,26 @@
     "    print(\"SCORE:\", avg_score, \"ERROR\", error, \"HOLDOUT SCORE\", test_score)\n",
     "\n",
     "    return{'loss':1-test_score, 'status': STATUS_OK, \"cv_score\":avg_score , \"cv_error\":error, \"holdout\":test_score }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5578275805660069"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(trainX['megno']<2.5).sum()/trainX['megno'].shape[0]"
    ]
   },
   {
@@ -220,13 +323,7 @@
       "0.8383348052440347                                                             \n",
       "SCORE:                                                                         \n",
       "0.83524788                                                                     \n",
-      "ERROR                                                                          \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "ERROR                                                                          \n",
       "0.004176767267413461                                                           \n",
       "HOLDOUT SCORE                                                                  \n",
       "0.8316174483923912                                                             \n",
