fixed new dropbox paths in generate_data.py

--- a/test_models/testing_functions_demo.ipynb
+++ b/test_models/testing_functions_demo.ipynb
@@ -322,7 +322,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "training_features = ['megnoxgb']#'ressummaryfeaturesxgb', 'orbsummaryfeaturesxgb']#, #, 'shadowtimesxgb']\n",
+    "training_features = ['megnoxgb'#'ressummaryfeaturesxgb', 'orbsummaryfeaturesxgb']#, #, 'shadowtimesxgb']\n",
     "training_datasets = ['random', 'resonant']\n",
     "testing_datasets = ['random', 'resonant']"
    ]
