--- a/train_models/train_orbsummaryfeaturesxgb_random.ipynb
+++ b/train_models/train_orbsummaryfeaturesxgb_random.ipynb
@@ -227,13 +227,7 @@
       "0.004843838759086565                                                            \n",
       "HOLDOUT SCORE                                                                   \n",
       "0.9640433523620419                                                              \n",
-      "SCORE:                                                                          \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "SCORE:                                                                          \n",
       "0.9477513200000001                                                              \n",
       "ERROR                                                                           \n",
       "0.0041758898930452934                                                           \n",
@@ -1035,7 +1029,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
