added restransformation data gen notebook and updated training functions

--- a/generate_training_data/test_notebooks/reproducibility.ipynb
+++ b/generate_training_data/test_notebooks/reproducibility.ipynb
@@ -4,10 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- For resonant and Ari TTV systems use REBOUND commit dd5dc543f5138b4ab32471a26230d39f8f2fcd7c\n",
+    "- For resonant and Ari TTV systems use REBOUND commit 06c95e2a69d319de3b077d92f2541cdcdf68a8fa\n",
     "- For random and Naireen systems use REBOUND commit 48feb327f90611a5569682578980b5604aa6102a on the oldMLstability branch\n",
     "\n",
-    "The resonant and Ari TTV systems use different REBOUND commits (a675e6f92cba32bae86f94739faec3b1b3098e81 for resonant). The problem is that this version doesn't have a __del__ function for the simulation archives and you get an error of too many open files when you run this. There was also a bug with keep_unsynchronized=1 and using MEGNO, so we now use the patch dd5dc543f5138b4ab32471a26230d39f8f2fcd7c. I test below that an integration that initializes MEGNO gives the same result as the original sim archives that don't.\n",
+    "The resonant and Ari TTV systems use different REBOUND commits (a675e6f92cba32bae86f94739faec3b1b3098e81 for resonant). The problem is that this version doesn't have a __del__ function for the simulation archives and you get an error of too many open files when you run this. There was also a bug with keep_unsynchronized=1 and using MEGNO, so we now use the patch 06c95e2a69d319de3b077d92f2541cdcdf68a8fa. I test below that an integration that initializes MEGNO gives the same result as the original sim archives that don't.\n",
     "\n",
     "The same commit 48feb327f90611a5569682578980b5604aa6102a works for the random and Naireen distribution systems. I had to branch from the old commit used to run the long integrations db3ae2cea8f3462463d3e0c5788a34625bb49a9c (actually it's not the exact one but close to it), and add the patches to calculate megno/lyap correctly with keep_unsynchronized=1 (which we need to match bit by bit). \n",
     "\n",
@@ -328,11 +328,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/mnt/ssd/Dropbox/Dropbox (Princeton)/workspace/rebound/rebound/simulationarchive.py:89: RuntimeWarning: Binary file was saved with a different version of REBOUND. Binary format might have changed.\n",
+      "  warnings.warn(message, RuntimeWarning)\n"
+     ]
+    }
+   ],
    "source": [
-    "sa = rebound.SimulationArchive('/mnt/ssd/workspace/stability/stabilitydataset/data/nonressystems/LP-358-499/simulation_archives/runs/sa0000000.bin')"
+    "sa = rebound.SimulationArchive('/mnt/ssd/Dropbox/Dropbox (Princeton)/workspace/stability/stabilitydataset/data/nonressystems/LP-358-499/simulation_archives/runs/sa0000000.bin')"
    ]
   },
   {
@@ -344,14 +353,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/mnt/ssd/workspace/rebound/rebound/simulationarchive.py:138: RuntimeWarning: You have to reset function pointers after creating a reb_simulation struct with a binary file.\n",
+      "/mnt/ssd/Dropbox/Dropbox (Princeton)/workspace/rebound/rebound/simulationarchive.py:138: RuntimeWarning: Binary file was saved with a different version of REBOUND. Binary format might have changed.\n",
+      "  warnings.warn(message, RuntimeWarning)\n",
+      "/mnt/ssd/Dropbox/Dropbox (Princeton)/workspace/rebound/rebound/simulationarchive.py:138: RuntimeWarning: You have to reset function pointers after creating a reb_simulation struct with a binary file.\n",
+      "  warnings.warn(message, RuntimeWarning)\n",
+      "/mnt/ssd/Dropbox/Dropbox (Princeton)/workspace/rebound/rebound/simulationarchive.py:138: RuntimeWarning: Encountered unkown field in file. File might have been saved with a different version of REBOUND.\n",
       "  warnings.warn(message, RuntimeWarning)\n"
      ]
     },
@@ -361,7 +374,7 @@
        "0.034641016151377546"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +395,7 @@
      "text": [
       "---------------------------------\n",
       "REBOUND version:     \t3.8.2\n",
-      "REBOUND built on:    \tApr  5 2019 23:19:09\n",
+      "REBOUND built on:    \tMay  7 2019 13:37:40\n",
       "Number of particles: \t8\n",
       "Selected integrator: \twhfast\n",
       "Simulation time:     \t5.2867929037495232e+04\n",
@@ -392,10 +405,10 @@
       "<rebound.Particle object, m=6.606794029325489e-06 x=0.029415138260382036 y=-0.011719099624968315 z=-2.0293887473444915e-05 vx=1.555005645878225 vy=3.789031687122423 vz=-0.000406892740939987>\n",
       "<rebound.Particle object, m=2.110761752620521e-05 x=0.018112352912284243 y=0.04141347641253959 z=2.7088584243370827e-05 vx=-3.0000505678412064 vy=1.485960978933363 vz=-0.004054656657424565>\n",
       "<rebound.Particle object, m=6.33670720508826e-05 x=0.0652942480233223 y=0.034455969465934946 z=3.627095560720546e-05 vx=-1.2402945581572582 vy=2.3861143277678045 vz=-0.0015986136857349866>\n",
-      "<rebound.Particle object, m=0.0 x=17762.165291859666 y=1216.1709563145066 z=-4907.121005212602 vx=-28101.714268610693 vy=-24987.081772814607 vz=-9.63740186229795>\n",
-      "<rebound.Particle object, m=0.0 x=-3894023.8396767545 y=-9541578.573931485 z=-3885.674838859423 vx=1189393051.959495 vy=-473982067.0690336 vz=-821276.1478981335>\n",
-      "<rebound.Particle object, m=0.0 x=10083218.62911017 y=-4990098.224596833 z=8697.196068983834 vx=335199865.25275075 vy=767327758.9297773 vz=501144.8112067171>\n",
-      "<rebound.Particle object, m=0.0 x=-123838.71482794773 y=275911.7992842127 z=-5090.712249804367 vx=-9486341.784501208 vy=-5074078.6318495795 vz=-5232.537461119522>\n",
+      "<rebound.Particle object, m=0.0 x=3409.5890227658456 y=10932.08179112876 z=7804.565503287914 vx=7514.324771086792 vy=-195.78454872333745 vz=5.666588076178027>\n",
+      "<rebound.Particle object, m=0.0 x=-1148678.0785693398 y=-2801531.8654278237 z=8103.966011018142 vx=350496186.4250442 vy=-139771080.65679076 vz=-241913.02827352716>\n",
+      "<rebound.Particle object, m=0.0 x=3448780.880380629 y=-1699895.9381788399 z=12461.191892886256 vx=114613492.50056306 vy=262817196.10281315 vz=171291.67752123848>\n",
+      "<rebound.Particle object, m=0.0 x=-2023202.6800410452 y=3911446.5119081996 z=5191.363316448416 vx=-135198231.79844245 vy=-71392564.28109005 vz=-75065.1000099186>\n",
       "---------------------------------\n"
      ]
     }
@@ -410,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +432,7 @@
      "text": [
       "---------------------------------\n",
       "REBOUND version:     \t3.8.2\n",
-      "REBOUND built on:    \tApr  5 2019 23:19:09\n",
+      "REBOUND built on:    \tMay  7 2019 13:37:40\n",
       "Number of particles: \t4\n",
       "Selected integrator: \twhfast\n",
       "Simulation time:     \t5.2867929037495232e+04\n",
@@ -533,7 +546,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
