added whichpaircollides notebook

--- a/train_models/train_ressummaryfeaturesxgb_resonantAMD.ipynb
+++ b/train_models/train_ressummaryfeaturesxgb_resonantAMD.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -49,6 +49,26 @@
    "source": [
     "trainingdatafolder = datapath+dset+featurefolder\n",
     "trainX, trainY, testX, testY = train_test_split(trainingdatafolder, features, filter=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(7999, 58)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trainX.shape"
    ]
   },
   {
