added runfuncs for ressummaryfeaturesv4 and v5 and tseries

--- a/generate_training_data/test_notebooks/reproducibility.ipynb
+++ b/generate_training_data/test_notebooks/reproducibility.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,11 +247,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/mnt/ssd/Dropbox/Dropbox (Princeton)/workspace/rebound/rebound/simulationarchive.py:89: RuntimeWarning: Binary file was saved with a different version of REBOUND. Binary format might have changed.\n",
+      "/mnt/ssd/Dropbox/Dropbox (Princeton)/workspace/rebound/rebound/simulationarchive.py:86: RuntimeWarning: Binary file was saved with a different version of REBOUND. Binary format might have changed.\n",
       "  warnings.warn(message, RuntimeWarning)\n",
-      "/mnt/ssd/Dropbox/Dropbox (Princeton)/workspace/rebound/rebound/simulationarchive.py:138: RuntimeWarning: Binary file was saved with a different version of REBOUND. Binary format might have changed.\n",
+      "/mnt/ssd/Dropbox/Dropbox (Princeton)/workspace/rebound/rebound/simulationarchive.py:132: RuntimeWarning: Binary file was saved with a different version of REBOUND. Binary format might have changed.\n",
       "  warnings.warn(message, RuntimeWarning)\n",
-      "/mnt/ssd/Dropbox/Dropbox (Princeton)/workspace/rebound/rebound/simulationarchive.py:138: RuntimeWarning: Encountered unkown field in file. File might have been saved with a different version of REBOUND.\n",
+      "/mnt/ssd/Dropbox/Dropbox (Princeton)/workspace/rebound/rebound/simulationarchive.py:132: RuntimeWarning: Encountered unkown field in file. File might have been saved with a different version of REBOUND.\n",
       "  warnings.warn(message, RuntimeWarning)\n"
      ]
     },
@@ -261,7 +261,7 @@
      "text": [
       "---------------------------------\n",
       "REBOUND version:     \t3.8.3\n",
-      "REBOUND built on:    \tJul 15 2019 10:02:53\n",
+      "REBOUND built on:    \tJul 26 2019 10:18:51\n",
       "Number of particles: \t8\n",
       "Selected integrator: \twhfast\n",
       "Simulation time:     \t1.0000000173176938e+06\n",
@@ -271,13 +271,13 @@
       "<rebound.Particle object, m=3.984920040268468e-06 x=-0.8738958364059268 y=0.4817517647367535 z=-0.003159573737010137 vx=-2.9307195320280233 vy=-5.572709926922893 vz=0.0012280114770667806>\n",
       "<rebound.Particle object, m=1.2444171101394952e-05 x=0.6063431581766432 y=1.4011530424916374 z=-0.007375445763490789 vx=-4.553768175624738 vy=2.174789434522493 vz=-0.026555396336484776>\n",
       "<rebound.Particle object, m=2.531702420746453e-07 x=-1.5977605108526833 y=0.5538766686714539 z=0.03817301570906049 vx=-1.5043238809838 vy=-4.4327274873988936 vz=-0.09496801973501136>\n",
-      "<rebound.Particle object, m=0.0 x=4930487764.575383 y=-10991242310.686579 z=123363536.99877734 vx=54804041018.110275 vy=6065989290.711975 vz=-39553419.60710788>\n",
-      "<rebound.Particle object, m=0.0 x=882975677142871.6 y=1680297143840696.0 z=-436750955022.44495 vx=-1.0458131786253564e+16 vy=5770432326964369.0 vz=-38220923686611.66>\n",
-      "<rebound.Particle object, m=0.0 x=-685953954032872.8 y=333220789026056.1 z=-6739088406304.121 vx=-997713452770216.5 vy=-2347202425323961.5 vz=21540420358654.46>\n",
-      "<rebound.Particle object, m=0.0 x=343197264717785.0 y=586723541427177.2 z=-149924912005665.34 vx=-2817419486856259.0 vy=585819446470562.2 vz=-300951997995455.25>\n",
+      "<rebound.Particle object, m=0.0 x=6213586752.3558035 y=-13850522487.169743 z=155679118.32310724 vx=69061175067.93398 vy=7644038799.134266 vz=-49843125.64490074>\n",
+      "<rebound.Particle object, m=0.0 x=1112679607583613.1 y=2117422273610842.5 z=-550370402086.6812 vx=-1.317878880308657e+16 vy=7271595968535348.0 vz=-48164002042704.13>\n",
+      "<rebound.Particle object, m=0.0 x=-864403111536999.4 y=419907320634955.6 z=-8492244694209.047 vx=-1257266043533339.2 vy=-2957821102746147.5 vz=27144105248296.746>\n",
+      "<rebound.Particle object, m=0.0 x=432479149940944.8 y=739358170112595.5 z=-188927490450019.72 vx=-3550363910449334.0 vy=738218876364823.5 vz=-379243884994710.3>\n",
       "---------------------------------\n",
-      "CPU times: user 1min 6s, sys: 8.55 ms, total: 1min 6s\n",
-      "Wall time: 1min 6s\n"
+      "CPU times: user 1min 5s, sys: 16.1 ms, total: 1min 5s\n",
+      "Wall time: 1min 5s\n"
      ]
     }
    ],
@@ -302,7 +302,7 @@
      "text": [
       "---------------------------------\n",
       "REBOUND version:     \t3.8.3\n",
-      "REBOUND built on:    \tJul 15 2019 10:02:53\n",
+      "REBOUND built on:    \tJul 26 2019 10:18:51\n",
       "Number of particles: \t4\n",
       "Selected integrator: \twhfast\n",
       "Simulation time:     \t1.0000000173176938e+06\n",
@@ -514,6 +514,125 @@
    "source": [
     "sim.particles[1].m"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# To get same outputs when stopping at different points with MEGNO, need to pass seed to init_megno, and need to use exact_finish_time=0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------------------------------\n",
+      "REBOUND version:     \t3.8.3\n",
+      "REBOUND built on:    \tJul 26 2019 10:18:51\n",
+      "Number of particles: \t8\n",
+      "Selected integrator: \twhfast\n",
+      "Simulation time:     \t1.0000029978431428e+04\n",
+      "Current timestep:    \t0.034641\n",
+      "---------------------------------\n",
+      "<rebound.Particle object, m=0.9999960150799597 x=1.5754637080804735e-05 y=5.552715431442515e-06 z=-1.1669878145708697e-08 vx=-7.301349514488498e-06 vy=4.705456663283622e-05 vz=-1.0008721700251636e-07>\n",
+      "<rebound.Particle object, m=3.984920040268468e-06 x=0.18820747244699707 y=0.9983892059722129 z=-0.006260219550608885 vx=-6.069045419128382 vy=1.1841416303639263 vz=-0.03798729681251473>\n",
+      "<rebound.Particle object, m=1.2444171101394952e-05 x=-1.3363731009885487 y=-0.7954836546826433 z=0.0021957760487688422 vx=2.628852215552226 vy=-4.19628486689365 vz=0.023007745192562795>\n",
+      "<rebound.Particle object, m=2.531702420746453e-07 x=0.4956723760588331 y=1.4533313436553013 z=0.036701363708389 vx=-4.850118344763209 vy=1.7624426656878491 vz=-0.13765108822109343>\n",
+      "<rebound.Particle object, m=0.0 x=-2666.3510321034682 y=-619.9582881806878 z=-3524.1342789518344 vx=-1.9468042031710093 vy=-0.9848575736752735 vz=-0.7013159545893228>\n",
+      "<rebound.Particle object, m=0.0 x=-534.2101209813109 y=-1026.9359796331962 z=-3511.089108011359 vx=2533.0606632993854 vy=13146.346628609126 vz=-82.71568417988145>\n",
+      "<rebound.Particle object, m=0.0 x=18647.563802542463 y=-34644.32650956652 z=-3337.4859454921675 vx=113710.93008829388 vy=67692.92004083125 vz=-185.3433096353668>\n",
+      "<rebound.Particle object, m=0.0 x=-43895.91368572932 y=14340.573425411407 z=-4672.382358222045 vx=-45928.014580556126 vy=-134417.8780332612 vz=-3317.4196742467966>\n",
+      "---------------------------------\n",
+      "CPU times: user 701 ms, sys: 4.01 ms, total: 705 ms\n",
+      "Wall time: 703 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "sa = rebound.SimulationArchive(datafolder+'resonant/simulation_archives/runs/sa0000000.bin')\n",
+    "sim = sa[0]\n",
+    "sim.ri_whfast.keep_unsynchronized = 1\n",
+    "sim.init_megno(seed=0)\n",
+    "    \n",
+    "times = np.linspace(0, 1e4, 1000)\n",
+    "for i, time in enumerate(times):\n",
+    "    sim.integrate(time, exact_finish_time=0)\n",
+    "    \n",
+    "#sim.integrate(1e4, exact_finish_time=0)\n",
+    "sim.status()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.03464045825280944"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sim.dt/sim.particles[1].P"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------------------------------\n",
+      "REBOUND version:     \t3.8.3\n",
+      "REBOUND built on:    \tJul 26 2019 10:18:51\n",
+      "Number of particles: \t8\n",
+      "Selected integrator: \twhfast\n",
+      "Simulation time:     \t1.0000029978431428e+04\n",
+      "Current timestep:    \t0.034641\n",
+      "---------------------------------\n",
+      "<rebound.Particle object, m=0.9999960150799597 x=1.5754637080804735e-05 y=5.552715431442515e-06 z=-1.1669878145708697e-08 vx=-7.301349514488498e-06 vy=4.705456663283622e-05 vz=-1.0008721700251636e-07>\n",
+      "<rebound.Particle object, m=3.984920040268468e-06 x=0.18820747244699707 y=0.9983892059722129 z=-0.006260219550608885 vx=-6.069045419128382 vy=1.1841416303639263 vz=-0.03798729681251473>\n",
+      "<rebound.Particle object, m=1.2444171101394952e-05 x=-1.3363731009885487 y=-0.7954836546826433 z=0.0021957760487688422 vx=2.628852215552226 vy=-4.19628486689365 vz=0.023007745192562795>\n",
+      "<rebound.Particle object, m=2.531702420746453e-07 x=0.4956723760588331 y=1.4533313436553013 z=0.036701363708389 vx=-4.850118344763209 vy=1.7624426656878491 vz=-0.13765108822109343>\n",
+      "<rebound.Particle object, m=0.0 x=-2666.3510321034682 y=-619.9582881806878 z=-3524.1342789518344 vx=-1.9468042031710093 vy=-0.9848575736752735 vz=-0.7013159545893228>\n",
+      "<rebound.Particle object, m=0.0 x=-534.2101209813109 y=-1026.9359796331962 z=-3511.089108011359 vx=2533.0606632993854 vy=13146.346628609126 vz=-82.71568417988145>\n",
+      "<rebound.Particle object, m=0.0 x=18647.563802542463 y=-34644.32650956652 z=-3337.4859454921675 vx=113710.93008829388 vy=67692.92004083125 vz=-185.3433096353668>\n",
+      "<rebound.Particle object, m=0.0 x=-43895.91368572932 y=14340.573425411407 z=-4672.382358222045 vx=-45928.014580556126 vy=-134417.8780332612 vz=-3317.4196742467966>\n",
+      "---------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "sa = rebound.SimulationArchive(datafolder+'resonant/simulation_archives/runs/sa0000000.bin')\n",
+    "sim = sa[0]\n",
+    "sim.ri_whfast.keep_unsynchronized = 1\n",
+    "sim.init_megno(seed=0)\n",
+    "       \n",
+    "sim.integrate(1e4, exact_finish_time=0)\n",
+    "sim.status()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
