added v6 not using res features and check for whfast

--- a/test_models/predict.ipynb
+++ b/test_models/predict.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,11 +15,11 @@
     "import sys\n",
     "import pandas as pd\n",
     "sys.path.append('../generate_training_data')\n",
-    "from training_data_functions import ressummaryfeaturesxgb\n",
+    "from training_data_functions import ressummaryfeaturesxgbv6\n",
     "%matplotlib inline\n",
     "\n",
-    "folderpath = '/Users/dtamayo/Desktop/MLstability/'\n",
-    "model = 'ressummaryfeaturesxgb_resonantAMD.pkl'"
+    "folderpath = '../'\n",
+    "model = 'ressummaryfeaturesxgbv6_resonant.pkl'"
    ]
   },
   {
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,36 +68,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 17.8 s, sys: 22.9 ms, total: 17.8 s\n",
-      "Wall time: 17.4 s\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "../generate_training_data/training_data_functions.py:408: RuntimeWarning: Degrees of freedom <= 0 for slice\n",
-      "  var = [EM[:j].var() for j in range(len(EM))]\n",
-      "/Users/dtamayo/miniconda3/envs/p3/lib/python3.7/site-packages/numpy/core/_methods.py:110: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  arrmean, rcount, out=arrmean, casting='unsafe', subok=False)\n",
-      "/Users/dtamayo/miniconda3/envs/p3/lib/python3.7/site-packages/numpy/core/_methods.py:132: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  ret = ret.dtype.type(ret / rcount)\n",
-      "../generate_training_data/training_data_functions.py:427: RuntimeWarning: Degrees of freedom <= 0 for slice\n",
-      "  var = [Z[:j].var() for j in range(len(Z))]\n"
+      "/mnt/ssd/Dropbox/Dropbox (Princeton)/workspace/celmech/celmech/andoyer.py:98: UserWarning: k=1 resonance has no separatrix for Phiprime < 1\n",
+      "  warnings.warn(\"k=1 resonance has no separatrix for Phiprime < 1\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 1.29 s, sys: 22.6 ms, total: 1.31 s\n",
+      "Wall time: 1.31 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "args = (10000, 1000) # (Norbits, Nout) Keep this fixed\n",
-    "summaryfeatures = ressummaryfeaturesxgb(sim, args)"
+    "summaryfeatures = ressummaryfeaturesxgbv6(sim, args)"
    ]
   },
   {
