changed git hashes for random systems

--- a/generate_training_data/test_notebooks/reproducibility.ipynb
+++ b/generate_training_data/test_notebooks/reproducibility.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- For resonant and Ari TTV systems use REBOUND commit 6fb912f615ca542b670ab591375191d1ed914672\n",
-    "- For random and Naireen systems use REBOUND commit 48feb327f90611a5569682578980b5604aa6102a on the oldMLstability branch\n",
+    "- For resonant, Naireen resonant systems, and Ari TTV systems use REBOUND commit 6fb912f615ca542b670ab591375191d1ed914672\n",
+    "- For random and Naireen random systems use REBOUND commit 361adacb48ff55ea8331adbf37a943e63ca02984 on the oldMLstability branch\n",
     "\n",
     "The resonant and Ari TTV systems use different REBOUND commits (a675e6f92cba32bae86f94739faec3b1b3098e81 for resonant). The problem is that this version doesn't have a __del__ function for the simulation archives and you get an error of too many open files when you run this. There was also a bug with keep_unsynchronized=1 and using MEGNO, so we now use the patch 06c95e2a69d319de3b077d92f2541cdcdf68a8fa. I test below that an integration that initializes MEGNO gives the same result as the original sim archives that don't. I then fixed something with collisions so the commit to use is 6fb912f615ca542b670ab591375191d1ed914672. Can see details in REBOUND repo pull requests.\n",
     "\n",
-    "The same commit 48feb327f90611a5569682578980b5604aa6102a works for the random and Naireen distribution systems. I had to branch from the old commit used to run the long integrations db3ae2cea8f3462463d3e0c5788a34625bb49a9c (actually it's not the exact one but close to it), and add the patches to calculate megno/lyap correctly with keep_unsynchronized=1 (which we need to match bit by bit). \n",
+    "The same commit 361adacb48ff55ea8331adbf37a943e63ca02984 works for the random and Naireen distribution systems. I had to branch from the old commit used to run the long integrations db3ae2cea8f3462463d3e0c5788a34625bb49a9c (actually it's not the exact one but close to it), and add the patches to calculate megno/lyap correctly with keep_unsynchronized=1 (which we need to match bit by bit). Had to update from 48feb327f90611a5569682578980b5604aa6102a to also keep pos/vel unsynchronized when using megno so that collisions are caught at the same time. In general I don't think  we want that in there (in our training dataset we are catching collisions with unsynchronized states, which is not correct, but statistically fine).\n",
     "\n",
     "Depending on which you load above, that pair will give the same results below, the other two will not (or won't work). But the same testsim function can work on all which lets us always use the same function in generatedata/training_data_functions.py. \n",
     "\n",
@@ -19,8 +19,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# When comparing reruns to label instability times, note that instability sim.t has been divided by P0 = sim.particles[1].P at t=0"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +89,7 @@
      "text": [
       "---------------------------------\n",
       "REBOUND version:     \t3.4.0\n",
-      "REBOUND built on:    \tJul 15 2019 09:59:19\n",
+      "REBOUND built on:    \tSep  6 2019 14:41:35\n",
       "Number of particles: \t8\n",
       "Selected integrator: \twhfast\n",
       "Simulation time:     \t1.0000000277011167e+06\n",
@@ -97,8 +104,8 @@
       "<rebound.Particle object, m=0.0 x=nan y=nan z=nan vx=nan vy=nan vz=nan>\n",
       "<rebound.Particle object, m=0.0 x=nan y=nan z=nan vx=nan vy=nan vz=nan>\n",
       "---------------------------------\n",
-      "CPU times: user 1min 1s, sys: 11.1 ms, total: 1min 1s\n",
-      "Wall time: 1min 1s\n"
+      "CPU times: user 1min 2s, sys: 7.19 ms, total: 1min 2s\n",
+      "Wall time: 1min 2s\n"
      ]
     }
    ],
@@ -115,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -124,20 +131,20 @@
      "text": [
       "---------------------------------\n",
       "REBOUND version:     \t3.4.0\n",
-      "REBOUND built on:    \tJul 15 2019 09:59:19\n",
+      "REBOUND built on:    \tSep  6 2019 10:05:30\n",
       "Number of particles: \t8\n",
       "Selected integrator: \twhfast\n",
-      "Simulation time:     \t1.0000000277011167e+06\n",
-      "Current timestep:    \t0.034640\n",
+      "Simulation time:     \t1.0000000338023065e+06\n",
+      "Current timestep:    \t0.034641\n",
       "---------------------------------\n",
-      "<rebound.Particle object, m=1.0 x=-3.629182535523935e-05 y=1.1843522755585877e-05 z=9.692032962716541e-08 vx=-2.7539975849184616e-05 vy=-0.00021744008363471437 vz=-8.43155749795529e-07>\n",
-      "<rebound.Particle object, m=3.4140160192072926e-05 x=0.9225193262954728 y=0.4107034942938748 z=-0.007950327673330494 vx=-2.4266312875245175 vy=5.726893721352419 vz=0.04678499897728613>\n",
-      "<rebound.Particle object, m=1.8787249753397036e-05 x=0.16981871403865156 y=-1.2279135896541034 z=0.011612920399274694 vx=5.527494030376944 vy=0.9037972044771627 vz=-0.06443832825556559>\n",
-      "<rebound.Particle object, m=1.8268998599127623e-06 x=0.87932635067516 y=-1.5303994574427984 z=-0.02390372135108166 vx=3.5793674392077772 vy=2.705759021771257 vz=0.24989183412357596>\n",
-      "<rebound.Particle object, m=2000000.0211196817 x=127.86692763949111 y=1.000000004325131 z=-1.8521116197954078e-05 vx=2.525239056072309e-06 vy=2.325757874177189e-07 vz=5.378951549300944e-05>\n",
-      "<rebound.Particle object, m=3.387946284356744e-21 x=127.87871689571585 y=0.9999207611004525 z=0.6506484090796262 vx=0.6796231308602376 vy=-0.005823439462666051 vz=-4.838007697315441>\n",
-      "<rebound.Particle object, m=4.4984796008862995 x=127.822662758464 y=1.0000276823410423 z=-0.2015712566179134 vx=-1.2108597494163325 vy=0.003980673829135862 vz=5.445653695855314>\n",
-      "<rebound.Particle object, m=-1.2252595769303873 x=127.75176105509976 y=0.9988286290084084 z=0.05191572712364854 vx=-1.63060775461692 vy=-0.059416800608562595 vz=4.965781895517487>\n",
+      "<rebound.Particle object, m=1.0 x=-2.4169674973042628e-06 y=-2.902584873605885e-06 z=-9.339027408257243e-08 vx=1.7764914928118457e-05 vy=-1.61325116766699e-05 vz=-2.948566738161285e-07>\n",
+      "<rebound.Particle object, m=3.920643739246495e-06 x=0.7963355907808964 y=0.6028272177049199 z=0.028550844572610853 vx=-3.799889282075802 vy=5.008877067389364 vz=0.120068302458679>\n",
+      "<rebound.Particle object, m=3.4264354014470015e-07 x=-0.24609811453316985 y=1.0621227517000933 z=0.014990265417138236 vx=-5.857390009276188 vy=-1.3735824312371623 vz=-0.35398095302828353>\n",
+      "<rebound.Particle object, m=5.454606845148995e-07 x=-1.1382245096207504 y=0.3211681822407384 z=-0.04341968935200762 vx=-1.5764765090196442 vy=-5.563850479938654 vz=-0.1000971823653928>\n",
+      "<rebound.Particle object, m=2000000.0333766455 x=145.3347708654363 y=1.000000003000767 z=1.404824862607173e-06 vx=2.7106544937204614e-06 vy=2.6366371465384754e-07 vz=-1.8537335102380535e-05>\n",
+      "<rebound.Particle object, m=-4.2351443705296325e-22 x=145.32201627462095 y=0.999300443291221 z=-0.6126539344516353 vx=-0.7544444331586283 vy=-0.055239835851509544 vz=4.969397584851874>\n",
+      "<rebound.Particle object, m=-4.357770770981662 x=145.33224272845112 y=1.0011263499326417 z=1.0240439777286778 vx=0.2841875749500519 vy=0.07852074571458503 vz=-2.1426865225094267>\n",
+      "<rebound.Particle object, m=5.768961496474346 x=145.67473451058348 y=0.9988193637233609 z=1.184853313480244 vx=0.2747738130613783 vy=-0.13565161761506836 vz=-0.3881576381457202>\n",
       "---------------------------------\n"
      ]
     }
@@ -247,11 +254,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/mnt/ssd/Dropbox/Dropbox (Princeton)/workspace/rebound/rebound/simulationarchive.py:86: RuntimeWarning: Binary file was saved with a different version of REBOUND. Binary format might have changed.\n",
+      "/mnt/ssd/Dropbox/Dropbox (Princeton)/workspace/rebound/rebound/simulationarchive.py:89: RuntimeWarning: Binary file was saved with a different version of REBOUND. Binary format might have changed.\n",
       "  warnings.warn(message, RuntimeWarning)\n",
-      "/mnt/ssd/Dropbox/Dropbox (Princeton)/workspace/rebound/rebound/simulationarchive.py:132: RuntimeWarning: Binary file was saved with a different version of REBOUND. Binary format might have changed.\n",
+      "/mnt/ssd/Dropbox/Dropbox (Princeton)/workspace/rebound/rebound/simulationarchive.py:138: RuntimeWarning: Binary file was saved with a different version of REBOUND. Binary format might have changed.\n",
       "  warnings.warn(message, RuntimeWarning)\n",
-      "/mnt/ssd/Dropbox/Dropbox (Princeton)/workspace/rebound/rebound/simulationarchive.py:132: RuntimeWarning: Encountered unkown field in file. File might have been saved with a different version of REBOUND.\n",
+      "/mnt/ssd/Dropbox/Dropbox (Princeton)/workspace/rebound/rebound/simulationarchive.py:138: RuntimeWarning: Encountered unkown field in file. File might have been saved with a different version of REBOUND.\n",
       "  warnings.warn(message, RuntimeWarning)\n"
      ]
     },
@@ -261,7 +268,7 @@
      "text": [
       "---------------------------------\n",
       "REBOUND version:     \t3.8.3\n",
-      "REBOUND built on:    \tJul 26 2019 10:18:51\n",
+      "REBOUND built on:    \tAug 10 2019 12:36:18\n",
       "Number of particles: \t8\n",
       "Selected integrator: \twhfast\n",
       "Simulation time:     \t1.0000000173176938e+06\n",
@@ -271,13 +278,13 @@
       "<rebound.Particle object, m=3.984920040268468e-06 x=-0.8738958364059268 y=0.4817517647367535 z=-0.003159573737010137 vx=-2.9307195320280233 vy=-5.572709926922893 vz=0.0012280114770667806>\n",
       "<rebound.Particle object, m=1.2444171101394952e-05 x=0.6063431581766432 y=1.4011530424916374 z=-0.007375445763490789 vx=-4.553768175624738 vy=2.174789434522493 vz=-0.026555396336484776>\n",
       "<rebound.Particle object, m=2.531702420746453e-07 x=-1.5977605108526833 y=0.5538766686714539 z=0.03817301570906049 vx=-1.5043238809838 vy=-4.4327274873988936 vz=-0.09496801973501136>\n",
-      "<rebound.Particle object, m=0.0 x=6213586752.3558035 y=-13850522487.169743 z=155679118.32310724 vx=69061175067.93398 vy=7644038799.134266 vz=-49843125.64490074>\n",
-      "<rebound.Particle object, m=0.0 x=1112679607583613.1 y=2117422273610842.5 z=-550370402086.6812 vx=-1.317878880308657e+16 vy=7271595968535348.0 vz=-48164002042704.13>\n",
-      "<rebound.Particle object, m=0.0 x=-864403111536999.4 y=419907320634955.6 z=-8492244694209.047 vx=-1257266043533339.2 vy=-2957821102746147.5 vz=27144105248296.746>\n",
-      "<rebound.Particle object, m=0.0 x=432479149940944.8 y=739358170112595.5 z=-188927490450019.72 vx=-3550363910449334.0 vy=738218876364823.5 vz=-379243884994710.3>\n",
+      "<rebound.Particle object, m=0.0 x=2868000091.228402 y=-6393005894.748299 z=71950949.29419656 vx=31875639547.08178 vy=3528157384.307537 vz=-23005426.43904063>\n",
+      "<rebound.Particle object, m=0.0 x=513564583490392.1 y=977310162065555.9 z=-254026978410.24664 vx=-6082756559354702.0 vy=3356252895094234.5 vz=-22230411587551.863>\n",
+      "<rebound.Particle object, m=0.0 x=-398970960179018.6 y=193810994173225.44 z=-3919651374368.95 vx=-580299440091728.6 vy=-1365201847970847.2 vz=12528540487609.527>\n",
+      "<rebound.Particle object, m=0.0 x=199613586839808.34 y=341255613437936.56 z=-87200723279221.53 vx=-1638693732183809.0 vy=340729763897603.1 vz=-175042507139138.25>\n",
       "---------------------------------\n",
-      "CPU times: user 1min 5s, sys: 16.1 ms, total: 1min 5s\n",
-      "Wall time: 1min 5s\n"
+      "CPU times: user 1min 6s, sys: 10.5 ms, total: 1min 6s\n",
+      "Wall time: 1min 6s\n"
      ]
     }
    ],
@@ -302,7 +309,7 @@
      "text": [
       "---------------------------------\n",
       "REBOUND version:     \t3.8.3\n",
-      "REBOUND built on:    \tJul 26 2019 10:18:51\n",
+      "REBOUND built on:    \tAug 10 2019 12:36:18\n",
       "Number of particles: \t4\n",
       "Selected integrator: \twhfast\n",
       "Simulation time:     \t1.0000000173176938e+06\n",
